# document-authentication-cv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  document_authentication_cv_plan.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  predictor.py  schemas.py
dashboard/: app.py
docs/: ESTUDIO_DEL_PROYECTO.md
models/saved/: .gitignore
notebooks/: 01_eda_dataset.ipynb  03_model_training.ipynb  04_gradcam_analysis.ipynb  05_evaluation.ipynb  06_model_comparison.ipynb  07_robustness_analysis.ipynb  08_model_registry.ipynb
scripts/: download_dataset.py  generate_samples.py
src/data/: augmentation.py  loader.py
src/explainability/: gradcam.py  visualizer.py
src/models/: architectures.py  classifier.py  comparator.py  evaluator.py  registry.py  trainer.py
src/preprocessing/: degradations.py  pipeline.py  quality.py
src/reporting/: pdf_report.py
tests/: test_api.py  test_architectures.py  test_augmentation.py  test_classifier.py  test_dashboard.py  test_evaluator.py  test_gradcam.py  test_placeholder.py  test_preprocessing.py  test_quality.py  test_registry.py  test_reporting.py
