[project]
name = "document-authentication-cv"
version = "1.0.0"
description = "Document authentication system using EfficientNet-B0 + Grad-CAM"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "opencv-python>=4.10",
    "albumentations>=1.4",
    "grad-cam>=1.5",
    "scikit-learn>=1.5",
    "mlflow>=2.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "streamlit>=1.40",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
pdf = [
    "reportlab>=4.2",
]
datasets = [
    "midv500>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py"    = ["E402", "F811"]
"dashboard/app.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov=api --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "notebooks/*"]
